src/styles/main.sass
/* ... */
    background-color: nth($diffcolors, $i)
    color: nth($difffonts, $i)

.avgchart__bar:nth-child(5)
  color: #fff

.avgchart__bar--tall
  +displayflex()
  +justify-content(center)
  +align-items(center)
  width: 35px
  height: 41px

.avgchart__num
  @extend %unpad
  font-weight: $extrabold
  font-size: 24px

.avgchart__label
  display: none

.edit
  display: grid
  grid-column-gap: 5px
  grid-template-columns: [col1-start] 1fr [col2-start] 50px [col2-end]
  grid-template-rows: [row1-start] 36px [row2-start] 36px [row3-start] 1fr [row3-end]
  width: 97%
  margin: 0 auto 10px
  padding: 5px
  background-color: $white

.edit--new
  border: 1px dashed $lightgrey 
  background-color: transparent
  margin: $header-height-small+16px auto 20px

.edit__add
  grid-column-start: col2-start
  grid-row-start: row1-start
  grid-row-end: row3-start
  margin: auto
  cursor: pointer

.edit__flexcontainer
  grid-column-start: col1-start
  grid-column-end: col2-start
  grid-row-start: row1-start
  grid-row-end: row2-end
  +displayflex()
  +flex-direction(column)

.edit__input
  width: 100%
  height: 36px
  padding: 6px
  border: 1px solid $darkgrey
  font-family: $sans-serif
  font-weight: $regular
  font-size: 18px
  color: $darkgrey
  white-space: nowrap
  overflow: hidden
  resize: none
  +standardTransition(height)

.edit__input:first-child
  margin-bottom: 5px

.edit__input:focus
  white-space: normal
  +standardTransition(height)

.edit__input::placeholder
  color: $lightgrey
  font-style: italic

.edit__input--dark
  border: none
  background-color: $main
  color: $white

.edit__input--dark::placeholder
  color: $white
  opacity: 0.8

.edit__selector
  -webkit-appearance: none
  -moz-appearance: none
  grid-column-start: col2-start
  grid-column-end: col2-end
  grid-row-start: row1-start
  grid-row-end: row2-start
  width: 100%
  height: 36px
  padding-left: 38%
  border: none
  border-radius: 0
  font-family: $sans-serif
  font-weight: $extrabold
  font-size: 22px

@for $i from 1 through 5
  .edit__selector--diff#{$i}
    background-color: nth($diffcolors, $i)
    color: nth($difffonts, $i)

.edit__delete
  grid-column-start: col2-start
  grid-row-start: row2-start
  height: 30px
  width: 28px
  margin: auto auto -2px

.edit__selector:hover,
.edit__delete:hover
  cursor: pointer

.progress
  +displayflex()
  +flex-direction(row)
  +justify-content(flex-start)
  +align-items(stretch)
  height: 12px
  width: 100%

.progress__block
  +flex(1, 1, auto)

.progress__block--correct
  background-color: $accent

.progress__block--incorrect
  background-color: $lightgrey

.progress__icon
  display: none

.card
  position: relative
  height: 300px
  width: 97%
  +flex(1, 0, auto)
  margin: 11px auto 7px
  perspective: 1000px
  +standardTransition()
  cursor: pointer

.card--autocheck
  height: 220px
  margin-bottom: 13px
  +flex(0, 0, auto)

.card__flipbox
  width: 100%
  height: 100%
  transform-style: preserve-3d
  +standardTransition(all, 0.4)

.card__flipbox--flip
  transform: rotateY(-180deg)

.card__side
  position: absolute
  top: 0
  left: 0
  backface-visibility: hidden
  background-color: $white
  border-radius: 24px
  overflow: hidden
  width: 100%
  height: 100%
  transform: rotateY(0deg)
  z-index: 2

.card__side + .card__side
  transform: rotateY(180deg)

.card__textcontainer
  +displayflex()
  +align-items(center)
  height: 100%
  width: 100%
  padding: 12px 0
  overflow-y: scroll
  overflow-x: hidden

.card__text
  max-width: 94%
  margin: 0 auto
  font-family: $sans-serif
  font-weight: $regular
  font-size: 20px
  text-align: center
  white-space: pre-line

.card__text--long
  font-size: 16px
  +align-self(flex-start)

.card__text--leftalign
  text-align: left

.card__text p
  @extend %unpad

.card__difficulty
  position: absolute
  top: $card-difficulty-size / -2
  right: $card-difficulty-size / -2
  height: $card-difficulty-size
  width: $card-difficulty-size
  +rotate(45)

.card__difficulty--reverse
  right: auto
  left: $card-difficulty-size / -2

@for $i from 1 through 5
  .card__difficulty--diff#{$i}
    background-color: nth($diffcolors, $i)

.card__diffnumber
  @extend %unpad
  position: absolute
  top: $card-difficulty-size * 0.02
  right: $card-difficulty-size * 0.12
  font-family: $sans-serif
  font-weight: $extrabold
  font-size: 22px

@for $i from 1 through 5
  .card__diffnumber--diff#{$i}
/* ... */

